create_input_atom_and_story

--- a/seven.movies/src/components/atoms/Button/Button.css
+++ b/seven.movies/src/components/atoms/Button/Button.css
@@ -1,26 +1,31 @@
-:root{
-    --primary-color: #3675F4;
-    --white: #fff;
-}
-
 .button{
-    padding: 13px 132px;
-    border-radius: 10px;
-
-    
+    border-radius: 10px;    
     border: 1px solid transparent;
     font-family: Montserrat;
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
+    background: var(--blue);
+    height: 50px;
 }   
 
-.type-primary{
-    background: var(--primary-color);
+.button.type-primary{
+    background: var(--blue);
     color: var(--white);
 }
 
-.type-secondary{
-    background: transparent;
-    color: var(--primary-color);
+.button.type-secondary{
+    color: var(--dark-gray);
+}
+
+.button.size-sm{
+    width: 200px;
+}
+
+.button.size-md{
+    width: 400px;
+}
+
+.button.size-xl{
+    width: 600px;
 }
